nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.test.saas.dyrs.online 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 10080
